# AURA

./: .gitignore  MULTIWINDOW_HUD_README.md  TODO_ARCHITECTURE.md  main.py  project-list.md  pyproject.toml  test_calendar.py  test_todo.py
core/: brain.py  logger.py  mouth.py  tools.py
core/apps/: __init__.py
core/apps/todo/: __init__.py  models.py  todo_app.py  todo_storage.py  todo_tool.py
core/tools/: __init__.py  calendar_tool.py  light_tool.py  search_tool.py  time_tool.py  weather_tool.py
documentation/: BUG_FIX_UNHASHABLE_SLICE.md  CUSTOM_WEATHER_ICONS.md  HUD_INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  LAYOUT_UPDATE_SUMMARY.md  OPENWEATHER_SETUP.md  RESTRUCTURE_COMPLETE.md  SMART_LIGHT_CONTROL.md  TESTING_GUIDE.md  TODO_APP_README.md  TODO_CHECKLIST.md  TODO_IMPLEMENTATION_SUMMARY.md  TODO_QUICK_START.md  TOOLS_RESTRUCTURE.md  WEATHER_CATEGORIES.md
frontend/: index.html  test_multiwindow.html
frontend/css/: style.css
frontend/images/weather/: README.md
frontend/js/: AudioVisualyser.js  hud.js  ui_main.js
settings/: config.yaml  config_loader.py
tests/: test_brain_light_integration.py  test_light.py  test_something.ipynb  test_tools.py
